# lab_next_bff

./: README.md
backend/: .gitignore  Cargo.toml  Dockerfile
backend/src/: main.rs
backend/src/kits/: mod.rs
backend/src/kits/course_plans/: mod.rs
frontend/: .env  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx  providers.tsx
frontend/src/app/compontents/async/: async.tsx
