[package]
name = "lab-next-bff"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
libsql-client = "0.31.0"
serde = {version="1.0.192", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.31.0"
shuttle-runtime = "0.31.0"
shuttle-secrets = "0.31.0"
shuttle-turso = "0.31.0"
tokio = "1.28.2"
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = "0.1.40"
